Crypto Metrics Retrieval
- Metrics Retrieval By Crypto Normalized Range Implementation
- Exception handling changes